# M5HAL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.ja.md  README.md  idf_component.yml  library.json  library.properties  platformio.ini
.github/workflows/: Arduino-Lint-Check.yml  IDFBuild.yml  build-check-idf.yml  build-check-pio.yml  clang-format-check.yml  fork-build-check.yml
examples/v1/HowToUse/: README.md
examples/v1/HowToUse/Bytecode/: Bytecode.ino
examples/v1/HowToUse/I2C/: I2C.ino
examples/v1/HowToUse/I2SAudio/: I2SAudio.ino
examples/v1/HowToUse/RemoteBus/: RemoteBus.ino
examples/v1/HowToUse/RemoteBus/host/: remote_bus_host.cpp
examples/v1/HowToUse/RemoteI2S/: RemoteI2S.ino
examples/v1/HowToUse/RemoteI2S/host/: remote_i2s_host.cpp
examples/v1/HowToUse/SPI/: SPI.ino
examples/v1/HowToUse/UART/: UART.ino
examples/v1/HowToUse/UARTEcho/: UARTEcho.ino
experiments/: README.md
experiments/v1/BenchmarkMenu/: BenchmarkMenu.cpp
experiments/v1/BoardMenu/: BoardMenu.cpp
experiments/v1/I2CHotPathBenchmark/: I2CHotPathBenchmark.cpp
experiments/v1/RemoteMenu/device/: remote_menu_device.cpp
experiments/v1/RemoteMenu/host/: remote_menu_host.cpp
experiments/v1/SoftwareSPILogicAnalyzer/: SoftwareSPILogicAnalyzer.cpp
experiments/v1/test/: README.md  hil-run.sh
experiments/v1/test/common/: hil_host.hpp
experiments/v1/test/uart_echo/: README.md
experiments/v1/test/uart_echo/device/: uart_echo.cpp
experiments/v1/test/uart_echo/host/: uart_echo.cpp
pio_envs/: README.md
pio_envs/v0/: check.ini.cli
pio_envs/v0v1/: check.ini.cli
pio_envs/v1/: check.ini.cli  examples.ini  experiments.ini  experiments_advanced.ini.cli  hil.ini.cli  test.ini.cli
pio_envs/v1/example_sources/: Bytecode.cpp  I2C.cpp  I2SAudio.cpp  RemoteBus.cpp  RemoteI2S.cpp  SPI.cpp  UART.cpp  UARTEcho.cpp
spec/: README.md  architecture.md  goals.md  verification.md
spec/design/: bus_accessor.md  bytecode.md  configuration.md  data_io.md  errors.md  frame.md  gpio.md  i2c.md  i2s.md  memory.md  remote.md  runtime.md  spi.md  transfer_desc.md  uart.md  v0_v1_coexistence.md  variants.md
spec/reference/: README.md  directory-layout.md
spec/style/: coding_style.md  glossary.md  migration.md
src/: CMakeLists.txt  M5HAL.hpp  M5HAL_v0.cpp  M5HAL_v0.hpp  M5HAL_v1.cpp  M5HAL_v1.hpp  m5_hal_config.hpp
src/m5_hal/_detail/: bsd_tcp.hpp  bsd_tcp.inl  freertos_mutex.hpp
src/m5_hal/_macro/: offer_all.inl  offer_kind.inl  offer_runtime_only.inl
src/m5_hal/hal/v0/: error.hpp  framework_checker.hpp  platform_checker.hpp  types.hpp
src/m5_hal/hal/v0/bus/: bus.hpp  bus.inl  i2c.hpp  i2c.inl  spi.hpp  spi.inl
src/m5_hal/hal/v0/frameworks/arduino/: header.hpp  impl.inl
src/m5_hal/hal/v0/gpio/: gpio.hpp
src/m5_hal/hal/v0/interface/: gpio.hpp  io.hpp
src/m5_hal/hal/v1/: assert.hpp  data.hpp  error.hpp  m5_hal.hpp  types.hpp
src/m5_hal/hal/v1/bus/: bus.hpp  bus.inl
src/m5_hal/hal/v1/bytecode/: bytecode.hpp  bytecode.inl
src/m5_hal/hal/v1/data/: limited.hpp  memory.hpp  stream.hpp
src/m5_hal/hal/v1/frame/: frame.hpp  frame.inl
src/m5_hal/hal/v1/gpio/: gpio.hpp  group.hpp  port.hpp
src/m5_hal/hal/v1/i2c/: i2c.hpp  i2c.inl  slave.hpp
src/m5_hal/hal/v1/i2s/: i2s.hpp  i2s.inl
src/m5_hal/hal/v1/memory/: allocator.hpp  allocator.inl  pool.hpp  pool.inl
src/m5_hal/hal/v1/remote/: remote.hpp  remote.inl
src/m5_hal/hal/v1/runtime/: runtime.hpp
src/m5_hal/hal/v1/service/: service.hpp
src/m5_hal/hal/v1/spi/: spi.hpp  spi.inl
src/m5_hal/hal/v1/uart/: uart.hpp  uart.inl
src/m5_hal/variants/: ids.hpp
src/m5_hal/variants/frameworks/: _checker.hpp
src/m5_hal/variants/frameworks/arduino/: _offer.hpp  hal.hpp  hal.inl
src/m5_hal/variants/frameworks/arduino/hal/gpio/: gpio.hpp
src/m5_hal/variants/frameworks/arduino/hal/i2c/: i2c.hpp  i2c.inl
src/m5_hal/variants/frameworks/arduino/hal/runtime/: runtime.hpp
src/m5_hal/variants/frameworks/arduino/hal/spi/: spi.hpp  spi.inl
src/m5_hal/variants/frameworks/arduino/hal/uart/: uart.hpp  uart.inl
src/m5_hal/variants/frameworks/espidf/: _offer.hpp  hal.hpp  hal.inl
src/m5_hal/variants/frameworks/espidf/detail/: espidf_version.hpp
src/m5_hal/variants/frameworks/espidf/hal/gpio/: gpio.hpp
src/m5_hal/variants/frameworks/espidf/hal/i2c/: backend_master_gen4.inl  backend_master_gen5.inl  backend_master_write_buffer.inl  i2c.hpp  i2c.inl
src/m5_hal/variants/frameworks/espidf/hal/i2s/: i2s.hpp  i2s.inl
src/m5_hal/variants/frameworks/espidf/hal/runtime/: runtime.hpp
src/m5_hal/variants/frameworks/espidf/hal/spi/: spi.hpp  spi.inl
src/m5_hal/variants/frameworks/espidf/hal/tcp/: tcp.hpp  tcp.inl
src/m5_hal/variants/frameworks/espidf/hal/uart/: uart.hpp  uart.inl
src/m5_hal/variants/frameworks/posix/: _offer.hpp  hal.hpp  hal.inl
src/m5_hal/variants/frameworks/posix/hal/runtime/: runtime.hpp
src/m5_hal/variants/frameworks/posix/hal/tcp/: remote_connect.hpp  remote_connect.inl  tcp.hpp  tcp.inl
src/m5_hal/variants/frameworks/posix/hal/uart/: ports.hpp  ports.inl  remote_connect.hpp  remote_connect.inl  uart.hpp  uart.inl
src/m5_hal/variants/frameworks/software/: _offer.hpp  hal.hpp  hal.inl
src/m5_hal/variants/frameworks/software/hal/i2c/: i2c.hpp  i2c.inl
src/m5_hal/variants/frameworks/software/hal/spi/: spi.hpp  spi.inl
src/m5_hal/variants/frameworks/stub/: _offer.hpp  hal.hpp
src/m5_hal/variants/frameworks/stub/hal/gpio/: gpio.hpp
src/m5_hal/variants/frameworks/stub/hal/runtime/: runtime.hpp
test/idf_component_build/: .gitignore  CMakeLists.txt
test/idf_component_build/main/: CMakeLists.txt  main.cpp
test/v0/stub/: build_check_arduino.cpp  build_check_espidf.cpp  build_check_native.cpp
test/v1/build_check/: build_check.hpp
test/v1/embedded/bus/: spi_wire_capture.hpp
test/v1/embedded/bus/test_espidf_spi_wire/: test_espidf_spi_wire.cpp
test/v1/native/test_build_check/: test_build_check.cpp
test/v1/stub/: build_check_arduino.cpp  build_check_coexist_arduino.cpp  build_check_coexist_espidf.cpp  build_check_espidf.cpp  build_check_native.cpp  build_check_v1inline.cpp
(+22 files in other folders)
